--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -55,3 +55,8 @@
 
 2015年12月3日 片山博文MZ
 改良。
+
+2015年12月31日 片山博文MZ
+パッチを当てる。ビブラート・トレモロなどのLFO効果がばっちり。
+これは、私の掲示板（http://katahiromz.bbs.fc2.com/）で
+「書けるかな？」さんが作ってくれたものです。
