enable LFO and add Makefile

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -60,3 +60,7 @@
 パッチを当てる。ビブラート・トレモロなどのLFO効果がばっちり。
 これは、私の掲示板（http://katahiromz.bbs.fc2.com/）で
 「書けるかな？」さんが作ってくれたものです。
+
+2016年1月1日 片山博文MZ
+ファイル「Makefile」を追加。
+ソースの整形。
